# TerreateGraphics

./: .gitignore  CMakeLists.txt  GeoFrame.sln  GeoFrame.vcxproj  GeoFrame.vcxproj.filters  LICENSE  LICENSE.txt  README.md  Reference.jp.md  ]  autoCompile.bat  buffer.cpp  buffer.h  callback.cpp  callback.h  compile.bat  compile.sh  compile_flags.txt  core.cpp  core.h  exception.h  flake.nix  font.cpp  font.h  main.cpp  runTest.sh  screen.cpp  screen.h  shader.cpp  shader.h  testBuild.sh  texture.cpp  texture.h  window.cpp  window.h
.github/workflows/: CMake-Auto-Build.yml  cmake-multi-platform.yml
GeoFrame/: defines.hpp
VSfiles/: GeoFrame.vcxproj  GeoFrame.vcxproj.filters
VSfiles/x64/Debug/: GeoFrame.exe.recipe  vc143.idb
VSfiles/x64/Debug/GeoFrame.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  GeoFrame.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
VSfiles/x64/Release/GeoFrame.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  GeoFrame.lastbuildstate  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
headers/GeoMath/: matrix.hpp
impls/: CMakeLists.txt  TerreateCore.cpp  TerreateGraphics.cpp  animation.cpp  buffer.cpp  compute.cpp  context.cpp  converter.cpp  core.cpp  defines.cpp  event.cpp  font.cpp  globj.cpp  handler.cpp  job.cpp  joystick.cpp  loader.cpp  logger.cpp  manager.cpp  model.cpp  network.cpp  newbuffer.cpp  object.cpp  parser.cpp  physics.cpp  primitive.cpp  screen.cpp  shader.cpp  skeleton.cpp  text.cpp  texture.cpp  transformer.cpp  window.cpp
impls/audio/: ALhelper.cpp  CMakeLists.txt  buffer.cpp  context.cpp  source.cpp
impls/core/: CMakeLists.txt  executor.cpp  object.cpp  uuid.cpp
impls/graphic/: CMakeLists.txt  GLdefs.cpp  buffer.cpp  compute.cpp  converter.cpp  font.cpp  gl.cpp  joystick.cpp  screen.cpp  shader.cpp  text.cpp  texture.cpp  window.cpp
impls/io/: CMakeLists.txt  animation.cpp  image.cpp
impls/io/format/: gltf.cpp  json.cpp
impls/kernel/: rawBuffer.cpp  rawFont.cpp  rawScreen.cpp  rawShader.cpp  rawTexture.cpp  rawWindow.cpp
impls/parser/: base.cpp  glb.cpp  json.cpp
includes/: GeoFrame.h  GeoFrame.hpp  TerreateCore.hpp  TerreateGraphics.hpp  animation.hpp  audio.hpp  bitflag.hpp  buffer.h  buffer.hpp  callback.h  callback.hpp  camera.hpp  compute.hpp  context.hpp  converter.hpp  core.h  core.hpp  defines.hpp  event.hpp  exception.hpp  exceptions.hpp  font.h  font.hpp  ft2build.h  globj.hpp  graphic.hpp  handler.hpp  interface.hpp  io.hpp  job.hpp  joystick.hpp  light.hpp  loader.hpp  logger.hpp  manager.hpp  math.hpp  model.hpp  network.hpp  newbuffer.hpp  object.hpp  (+17 more)
includes/audio/: ALdefs.hpp  ALhelper.hpp  buffer.hpp  context.hpp  dynamic.hpp  source.hpp
includes/core/: event.hpp  executor.hpp  math.hpp  nullable.hpp  object.hpp  property.hpp  uuid.hpp
includes/glad/: gl.h
includes/graphic/: GLdefs.hpp  buffer.hpp  compute.hpp  converter.hpp  font.hpp  joystick.hpp  screen.hpp  shader.hpp  text.hpp  texture.hpp  window.hpp
includes/headers/GeoMath/: exceptions.hpp  matrix.hpp  quaternion.hpp  transformer.hpp  vector.hpp
includes/headers/glad/: gl.h  glad.h
includes/io/: animation.hpp  audio.hpp  image.hpp  material.hpp  model.hpp  skeleton.hpp
includes/io/format/: gltf.hpp  json.hpp
includes/kernel/: rawBuffer.hpp  rawFont.hpp  rawObject.hpp  rawScreen.hpp  rawShader.hpp  rawTexture.hpp  rawWindow.hpp
includes/math/: complex.hpp  core.hpp  fraction.hpp  math.hpp  matrix.hpp  matrixNxM.hpp  matrixNxN.hpp  quaternion.hpp  utils.hpp  vector.hpp  vectorColumn.hpp  vectorRow.hpp
includes/parser/: base.hpp  glb.hpp  json.hpp
libs/: freetyped.lib
resources/includes/glad/: glad.h
resources/libs/: freetype.lib
scripts/: build.bat  build.sh  fullBuild.bat  fullBuild.sh  run.bat  run.sh  targets.txt
src/: buffer.cpp  callback.cpp  core.cpp  font.cpp  glad.cpp  screen.cpp  shader.cpp  texture.cpp  window.cpp
tests/: CMakeLists.txt  TCTest  TCTest.cpp  TGTest.cpp  main.cpp  run.bat  test
tests/impls/: CMakeLists.txt  TCTest.cpp  audiotest.cpp  coretest.cpp  drawingTest.cpp  fontTest.cpp  glbTest.cpp  graphictest.cpp  iotest.cpp  jobTest.cpp  jsonTest.cpp  main.cpp  networkTest.cpp  screenTest.cpp  textureTest.cpp  tmp.cpp  windowTest.cpp
tests/includes/: audiotest.hpp  coretest.hpp  drawingTest.hpp  fontTest.hpp  glbTest.hpp  graphictest.hpp  iotest.hpp  jobTest.hpp  jsonTest.hpp  networkTest.hpp  screenTest.hpp  textureTest.hpp  windowTest.hpp
tests/resources/: Tests  compute.glsl  fragment.glsl  testFrag.glsl  testJson.json  testVert.glsl  textFrag.glsl  textVert.glsl  vertex.glsl
tests/resources/shaders/: converter.glsl  mainFrag.glsl  mainVert.glsl  screenFrag.glsl  screenVert.glsl  textFrag.glsl  textVert.glsl
tests/samples/: bufferTest  fontTest  jobTest  jsonTest  networkTest  screenTest  textureTest  windowTest
