cmake_minimum_required(VERSION 3.20)

if(NOT DEFINED TARGET)
  message(STATUS "TARGET is not defined...")
  set(TARGET "window")
  message(STATUS "TARGET is set to default value: window")
else()
  message(STATUS "TARGET is : ${TARGET}")
endif()
project(${TARGET}Test)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

function(setLibs)
  target_link_libraries(${PROJECT_NAME} TerreateCore)
endfunction(setLibs)

function(setIncludes)
  target_include_directories(${PROJECT_NAME} PUBLIC ../../includes)
  target_include_directories(${PROJECT_NAME} PUBLIC ../../includes/deps)
  target_include_directories(${PROJECT_NAME} PUBLIC ../../includes/math)
endfunction()

function(buildBuffer)
  add_executable(${PROJECT_NAME} drawingTest.cpp)
  setlibs()
  setincludes()
endfunction()

function(buildFont)
  add_executable(${PROJECT_NAME} fontTest.cpp)
  setlibs()
  setincludes()
endfunction()

function(buildJob)
  add_executable(${PROJECT_NAME} jobTest.cpp)
  setlibs()
  setincludes()
endfunction()

function(buildScreen)
  add_executable(${PROJECT_NAME} screenTest.cpp)
  setlibs()
  setincludes()
endfunction()

function(buildTexture)
  add_executable(${PROJECT_NAME} textureTest.cpp)
  setlibs()
  setincludes()
endfunction()

function(buildWindow)
  add_executable(${PROJECT_NAME} windowTest.cpp)
  setlibs()
  setincludes()
endfunction()

function(buildTC)
  add_executable(${PROJECT_NAME} TCTest.cpp)
  setlibs()
  setincludes()
endfunction()

if(${TARGET} STREQUAL "buffer")
  buildbuffer()
elseif(${TARGET} STREQUAL "font")
  buildfont()
elseif(${TARGET} STREQUAL "job")
  buildjob()
elseif(${TARGET} STREQUAL "screen")
  buildscreen()
elseif(${TARGET} STREQUAL "texture")
  buildtexture()
elseif(${TARGET} STREQUAL "window")
  buildwindow()
elseif(${TARGET} STREQUAL "TC")
  buildtc()
else()
  message(STATUS "TARGET target is not recognized...")
  set(TARGET "TC")
  message(STATUS "TARGET target is set to default value: TC")
  buildtc()
endif()
